--- a/katabatic/noel.css
+++ b/katabatic/noel.css
@@ -182,3 +182,31 @@
     margin-left: 40%;
     margin-bottom: 15px;
 }
+
+
+
+.end-section {
+    width: 100%;
+    background-color: burlywood;
+    color: green;
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+  }
+  
+  .company-info img {
+    max-width: 100px;
+  }
+  
+  .quick-links, .legal-info, .contacts {
+    text-align: left;
+  }
+  .quick-links ul:hover{
+    color: white;
+  }
+  
+  .contacts ul li:hover{
+    color:blue;
+  }
+  
+  
