--- a/home.css
+++ b/home.css
@@ -384,5 +384,34 @@ header .fa-bars{
    }
     
 }
+
+
+
+
+.end-section {
+    width: 100%;
+    background-color: burlywood;
+    color: green;
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+  }
+  
+  .company-info img {
+    max-width: 100px;
+  }
+  
+  .quick-links, .legal-info, .contacts {
+    text-align: left;
+  }
+  .quick-links ul:hover{
+    color: white;
+  }
+  
+  .contacts ul li:hover{
+    color:blue;
+  }
+  
+  
  
 @import url(https://fonts.google.com/specimen/Fira+Sans?query=fira+sans)
